[tool.poetry]
name = "tsoha"
version = "0.1.0"
description = ""
authors = ["PurPul <axbergsamuel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.2.2"
invoke = "^2.0.0"
pylint = "^2.15.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
